--- a/pytestFlexReport/templates/template1.html
+++ b/pytestFlexReport/templates/template1.html
@@ -160,7 +160,7 @@
             </li>
             <li class="list-group-item">
                 <button type="button" class="btn btn-success">用例总数</button>
-                <span class="text-dark">{{ all }}</span>
+                <span class="text-dark">{{ total }}</span>
             </li>
 
 
