--- a/pytestFlexReport/templates/template1.html
+++ b/pytestFlexReport/templates/template1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>测试报告</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css -->
+    <link rel="stylesheet" href="static/bootstrap.min.css" type="text/css">
     <!--    页面样式-->
     <style type="text/css">
         /*标题样式*/
@@ -329,10 +329,10 @@
     <div style="height: 200px"></div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js"></script>
+<!-- https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js -->
+<script src="static/jquery.slim.min.js" type="text/javascript"></script>
+<!-- https://cdn.jsdelivr.net/npm/echarts/dist/echarts.min.js -->
+<script type="text/javascript" src="static/echarts.min.js"></script>
 
 <script>
     var tbodyTr = $('tbody tr');
