--- a/pytestFlexReport/templates/template2.html
+++ b/pytestFlexReport/templates/template2.html
@@ -4,8 +4,8 @@
 
     <meta charset="UTF-8">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!-- https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css -->
+    <link rel="stylesheet" href="static/bootstrap.min.css" type="text/css">
     <!--    页面样式-->
     <style type="text/css">
         /*标题样式*/
@@ -221,7 +221,7 @@
                     <div class="info">
                         <div style="flex:5">
                             <button type="button" class="btn btn-primary btn-sm">开始时间</button>
-                            <span>{{ start_time }}</span>
+                            <span>{{ begin_time }}</span>
                         </div>
                         <div style="flex:5">
                             <button type="button" class="btn btn-primary btn-sm">用例总数</button>
@@ -411,11 +411,10 @@
 
 </div>
 
-
-<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js"></script>
+<!-- https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js -->
+<script src="static/jquery.slim.min.js" type="text/javascript"></script>
+<!-- https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js -->
+<script type="text/javascript" src="static/echarts.min.js"></script>
 
 
 <script type="text/javascript">
@@ -426,8 +425,8 @@
             "fail": `{{failed}}`,
             "skip": '{{skipped}}',
             "error": `{{error}}`,
-            "runtime": '{{run_time}}',
-            "begin_time": "{{start_time}}",
+            "run_time": '{{run_time}}',
+            "begin_time": "{{begin_time}}",
             "pass_rate": '{{pass_rate}}',
         }
     ;
