--- a/pytestFlexReport/templates/template3.html
+++ b/pytestFlexReport/templates/template3.html
@@ -40,10 +40,6 @@
             margin: 0 10px;
         }
 
-        .box3 {
-            flex: 4;
-        }
-
         .panel {
             position: relative;
             border: 1px solid rgba(25, 186, 139, 0.17);
@@ -123,25 +119,6 @@
             color: #28a745 !important;
         }
 
-        .test_log {
-            background: rgba(163, 171, 189, 0.15);
-            width: 100%;
-            height: 50px;
-            border-top: none;
-            border-bottom: none;
-            display: none;
-            text-align: left;
-        }
-
-        .test_log td {
-            text-align: left;
-            height: 30px;
-            margin: 0;
-            padding-left: 3em;
-            padding-right: 3em;
-            font: none 18px/24px "Microsoft YaHei UI";
-        }
-
         pre {
             margin: 0;
             white-space: pre-wrap;
@@ -151,35 +128,6 @@
             color: #fff;
             line-height: 22px;
             font-size: 14px
-        }
-
-        .chart4 {
-            overflow: auto;
-            width: 100%;
-            height: 600px;
-
-        }
-
-        .chart4::-webkit-scrollbar {
-            width: 10px;
-
-        }
-
-        .chart4::-webkit-scrollbar-thumb {
-            /*滚动条里面小方块*/
-            border-radius: 5px;
-            -webkit-box-shadow: inset 0 0 5px rgba(4, 0, 225, 0.62);
-            background: #272789;
-            height: 10px;
-
-        }
-
-        .chart4::-webkit-scrollbar-track {
-            /*滚动条里面轨道*/
-            -webkit-box-shadow: inset 0 0 5px rgba(0, 21, 255, 0.54);
-            border-radius: 10px;
-            background: rgba(214, 214, 214, 0.64);
-
         }
 
         /*详细内容描述的小标题*/
@@ -203,8 +151,8 @@
         <div class="box1">
             <div class="panel">
                 <h2>执行结果</h2>
-                <div class="chart" id="char1"></div>
-                <div class="panel-footer"></div>
+{#                <div class="chart" id="char1"></div>#}
+{#                <div class="panel-footer"></div>#}
             </div>
         </div>
         <div class="box2">
@@ -272,37 +220,37 @@
             <table class="table" style="color: #fff">
                 <thead class="text-light" style="background: rgba(3, 14, 70, 0.5)">
                 <tr>
-                    <th scope="col" style="width: 5%;padding: 0">ID</th>
-                    <th scope="col" style="width: 20%;padding: 0">模块</th>
-                    <th scope="col" style="width: 15%;padding: 0">通过</th>
-                    <th scope="col" style="width: 15%;padding: 0">失败</th>
-                    <th scope="col" style="width: 15%;padding: 0">阻塞</th>
-                    <th scope="col" style="width: 15%;padding: 0">跳过</th>
-                    <th scope="col" style="width: 15%;padding: 0">通过率</th>
+                    <th scope="col" style="width: 10%;padding: 0">ID</th>
+                    <th scope="col" style="width: 30%;padding: 0">模块</th>
+                    <th scope="col" style="width: 10%;padding: 0">总数</th>
+                    <th scope="col" style="width: 10%;padding: 0">通过</th>
+                    <th scope="col" style="width: 10%;padding: 0">失败</th>
+                    <th scope="col" style="width: 10%;padding: 0">阻塞</th>
+                    <th scope="col" style="width: 10%;padding: 0">跳过</th>
+                    <th scope="col" style="width: 10%;padding: 0">通过率</th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for name, foo in cases.items() %}
+                <tr>
+                    <td>0</td>
+                    <td>合计</td>
+                    <td>{{ total }}</td>
+                    <td>{{ passed }}</td>
+                    <td>{{ failed }}</td>
+                    <td>{{ error }}</td>
+                    <td>{{ skipped }}</td>
+                    <td>{{ pass_rate }}%</td>
+                </tr>
+                {% for name, foo in module_results.items() %}
                 <tr class="case_">
                     <td>{{ loop.index }}</td>
-                    <td class="{{ foo.fileName|replace('\\','')|replace('.','') }}">{{ foo.fileName.split("\\")[-1] }}</td>
-                    <td>{{ foo.method.split(".")[-1] }}</td>
-                    <td>{{ foo.desc }}</td>
-                    <td>{{ foo.duration }}</td>
-                    <td>{{ foo.duration }}</td>
-                    {% if foo.outcome == 'passed' %}
-                    {% if foo.rerun %}
-                    <td style="color: #fa6f6f">通过</td>
-                    {% else %}
-                    <td class="text-success">通过</td>
-                    {% endif %}
-                    {% elif foo.outcome == 'failed' %}
-                    <td class="text-warning">失败</td>
-                    {% elif foo.outcome == 'error' %}
-                    <td class="text-danger">错误</td>
-                    {% else %}
-                    <td class="text-info">跳过</td>
-                    {% endif %}
+                    <td class="{{ name|replace('\\','')|replace('.','') }}">{{ name.split("\\")[-1] }}</td>
+                    <td>{{ foo.total }}</td>
+                    <td>{{ foo.passed }}</td>
+                    <td>{{ foo.failed }}</td>
+                    <td>{{ foo.error }}</td>
+                    <td>{{ foo.skipped }}</td>
+                    <td>{{ foo.pass_rate }}%</td>
                 </tr>
                 {% endfor %}
             </table>
@@ -312,12 +260,6 @@
     </div>
 
 </div>
-
-<!-- https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js -->
-{#<script src="static/jquery.slim.min.js" type="text/javascript"></script>#}
-<!-- https://cdn.jsdelivr.net/npm/echarts@5.1.2/dist/echarts.min.js -->
-<script type="text/javascript" src="static/echarts.min.js"></script>
-
 
 <script type="text/javascript">
 
