--- a/pytestFlexReport/templates/template1.html
+++ b/pytestFlexReport/templates/template1.html
@@ -247,7 +247,7 @@
 
 
                 <td>{{ loop.index }}</td>
-                <td class="{{ foo.fileName|replace('\\','')|replace('.','') }}">{{ foo.fileName }}</td>
+                <td class="{{ foo.moduleName|replace('\\','')|replace('.','') }}">{{ foo.moduleName }}</td>
                 <td>{{ foo.method }}</td>
                 <td>{{ foo.desc }}</td>
                 <td>{{ foo.duration }}</td>
