--- a/pytestFlexReport/templates/template3.html
+++ b/pytestFlexReport/templates/template3.html
@@ -3,14 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ title }}</title>
-  <!-- https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css -->
-  <link rel="stylesheet" href="static/bootstrap.min.css" type="text/css">
   <!--    页面样式-->
   <style type="text/css">
       /*标题样式*/
 
       .main {
           background: rgba(7, 10, 88, 0.99);
+      }
+
+      body {
+          margin: 0;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 1.5;
+          color: #212529;
+          text-align: left;
+          background-color: #fff;
       }
 
       .title {
@@ -25,10 +34,8 @@
       }
 
       .content-box {
-          {#height: 260px;#}
           width: 100%;
           display: flex;
-          margin-bottom: 10px;
       }
 
       .box1 {
@@ -48,7 +55,7 @@
           margin-bottom: 10px;
       }
 
-      .panel h2, .test_info h2 {
+      .panel h2, .result_table h2 {
           height: 40px;
           line-height: 40px;
           text-align: center;
@@ -77,13 +84,79 @@
           margin-left: 20px;
       }
 
+      .btn {
+          display: inline-block;
+          font-weight: 400;
+          color: #212529;
+          text-align: center;
+          vertical-align: middle;
+          -webkit-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
+          background-color: transparent;
+          border: 1px solid transparent;
+          padding: .375rem .75rem;
+          font-size: 1rem;
+          line-height: 1.5;
+          border-radius: .25rem;
+          transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+      }
+
+      .btn-primary {
+          color: #fff;
+          background-color: #007bff;
+          border-color: #007bff;
+      }
+
+      .btn-group-sm > .btn, .btn-sm {
+          padding: .25rem .5rem;
+          font-size: .875rem;
+          line-height: 1.5;
+          border-radius: .2rem;
+      }
+
+      [type=button]:not(:disabled), [type=reset]:not(:disabled), [type=submit]:not(:disabled), button:not(:disabled) {
+          cursor: pointer;
+      }
+
+      .btn:not(:disabled):not(.disabled) {
+          cursor: pointer;
+      }
 
       /* 执行信息样式   */
-      .test_info {
+      .result_table {
+          display: block;
           width: 100%;
           padding: 0 10px;
           background: rgba(3, 14, 70, 0.5);
 
+      }
+
+      .table {
+          width: 100%;
+          margin-bottom: 1rem;
+          border-collapse: collapse;
+          display: table;
+          text-indent: initial;
+          border-spacing: 2px;
+          border-color: gray;
+
+      }
+
+      .table body {
+          margin: 0;
+          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+          font-size: 1rem;
+          font-weight: 400;
+          line-height: 1.5;
+          color: #212529;
+          text-align: left;
+          background-color: #fff;
+      }
+
+      *, ::after, ::before {
+          box-sizing: border-box;
       }
 
       .table td, .table th {
@@ -93,6 +166,27 @@
           text-align: center;
           height: 40px;
           color: #fff;
+      }
+
+      .table thead th {
+          vertical-align: bottom;
+          border-bottom: 2px solid #dee2e6;
+      }
+
+      .table .text-light {
+          color: #f8f9fa !important;
+      }
+
+      .table tbody {
+          display: table-row-group;
+          vertical-align: middle;
+          border-color: inherit;
+      }
+
+      .table tr {
+          display: table-row;
+          vertical-align: inherit;
+          border-color: inherit;
       }
 
       option {
@@ -186,7 +280,7 @@
     </div>
   </div>
 
-  <div class="test_info">
+  <div class="result_table">
     <h2>结果统计</h2>
     <div class="table_data">
       <table class="table" style="color: #fff">
@@ -232,449 +326,14 @@
       </table>
     </div>
 
-    <div style="height: 200px"></div>
+    <div style="height: 20px"></div>
   </div>
 
 </div>
 
 <script type="text/javascript">
 
-  const resulte = {
-      "success": `{{passed}}`,
-      "total": `{{total}}`,
-      "fail": `{{failed}}`,
-      "skip": '{{skipped}}',
-      "error": `{{error}}`,
-      "duration": '{{duration}}',
-      "begin_time": "{{begin_time}}",
-      "pass_rate": '{{pass_rate}}',
-    }
-  ;
-  const history = {{ history}};
-
-  var passRate = [];
-  var dTime = [];
-  history.forEach(function (item, index, array) {
-    passRate.push(item.pass_rate);
-    dTime.push(item.begin_time)
-  });
-  if (passRate.length === 1) {
-    passRate.unshift(0);
-    dTime.unshift(0)
-  }
-
-  function char01() {
-    let myChart = echarts.init(document.getElementById('char1'));
-    let option = {
-      color: ['#28a745', '#ffc107', '#dc3545', '#17a2b8'],
-      tooltip: {
-        trigger: 'item',
-        formatter: '{a} <br/>{b}: {c} ({d}%)',
-        backgroundColor: 'rgba(3, 14, 70, 0.5)',
-        borderColor: '#333',
-        textStyle: {
-          color: '#fff',
-          fontSize: "13"
-        },
-      },
-      legend: {
-        bottom: "0%",
-        // 小图标的宽度和高度
-        itemWidth: 10,
-        itemHeight: 10,
-        data: ['通过', '失败', '错误', '跳过'],
-        textStyle: {
-          color: "rgba(255,255,255,.5)",
-          fontSize: "12"
-        },
-      },
-      series: [
-        {
-          name: '测试结果',
-          type: 'pie',
-          radius: ['50%', '70%'],
-          avoidLabelOverlap: false,
-          label: {
-            show: false,
-            position: 'center'
-          },
-          emphasis: {
-            label: {
-              show: true,
-              fontSize: '20',
-              fontWeight: 'bold',
-              color: '#fff',
-            }
-          },
-          labelLine: {
-            show: false
-          },
-          data: [
-            {value: resulte.success, name: '通过'},
-            {value: resulte.fail, name: '失败'},
-            {value: resulte.error, name: '错误'},
-            {value: resulte.skip, name: '跳过'}
-          ]
-        }
-      ]
-    };
-    myChart.setOption(option)
-
-  }
-
-  char01();
-
-  //    大图
-  function char02() {
-
-    // 基于准备好的dom，初始化echarts实例
-    let myChart = echarts.init(document.getElementById("char2"));
-    // 2. 指定配置和数据
-    option = {
-      tooltip: {
-        trigger: 'axis',
-        formatter: '{a} <br/>{b}:  ({c}%)',
-        backgroundColor: 'rgba(3, 14, 70, 0.5)',
-        borderColor: '#333',
-        textStyle: {
-          color: '#fff',
-          fontSize: "13"
-        },
-      },
-
-      grid: {
-        left: "10",
-        top: "30",
-        right: "10",
-        bottom: "0",
-        containLabel: true
-      },
-
-      xAxis: [{
-        type: "category",
-        boundaryGap: false,
-        show: false,
-        axisLabel: {
-          textStyle: {
-            color: "rgba(255,255,255,.6)",
-            fontSize: 12
-          }
-        },
-        axisLine: {
-          lineStyle: {
-            color: "rgba(255,255,255,.2)"
-          }
-        },
-
-        data: dTime
-      },
-        {
-          axisPointer: {
-            show: false
-          },
-          axisLine: {
-            show: false
-          },
-          position: "bottom",
-          offset: 20
-        }
-      ],
-
-      yAxis: [{
-        type: "value",
-        axisTick: {
-          show: false
-        },
-        axisLine: {
-          lineStyle: {
-            color: "rgba(255,255,255,.1)"
-          }
-        },
-        axisLabel: {
-          textStyle: {
-            color: "rgba(255,255,255,.6)",
-            fontSize: 12
-          }
-        },
-
-        splitLine: {
-          lineStyle: {
-            color: "rgba(255,255,255,.1)"
-          }
-        }
-      }],
-      series: [{
-        name: "通过率",
-        type: "line",
-        smooth: true,
-        symbol: "circle",
-        symbolSize: 5,
-        showSymbol: true,
-        lineStyle: {
-          normal: {
-            color: "#0184d5",
-            width: 2
-          }
-        },
-        areaStyle: {
-          normal: {
-            color: new echarts.graphic.LinearGradient(
-              0,
-              0,
-              0,
-              1,
-              [{
-                offset: 0,
-                color: "rgba(1, 132, 213, 0.4)"
-              },
-                {
-                  offset: 0.8,
-                  color: "rgba(1, 132, 213, 0.1)"
-                }
-              ],
-              false
-            ),
-            shadowColor: "rgba(0, 0, 0, 0.1)"
-          }
-        },
-        itemStyle: {
-          normal: {
-            color: "#0184d5",
-            borderColor: "rgba(221, 220, 107, .1)",
-            borderWidth: 18
-          }
-        },
-        data: passRate
-      },
-      ]
-    };
-    // 重新把配置好的新数据给实例对象
-    myChart.setOption(option);
-
-  }
-
-  char02();
-
-  function char03() {
-    // 基于准备好的dom，初始化echarts实例
-    let myChart = echarts.init(document.getElementById("char3"));
-    var data = [resulte.success, resulte.fail, resulte.error, resulte.skip];
-    var titlename = ["通过用例", "失败用例", "错误用例", "跳过用例",];
-    var valdata = [resulte.total, resulte.total, resulte.total, resulte.total];
-    var myColor = ['#28a745', '#ffc107', '#dc3545', '#17a2b8'];
-    option = {
-      //图标位置
-      grid: {
-        top: "10%",
-        left: "22%",
-        bottom: "10%"
-      },
-      xAxis: {
-        show: false
-      },
-      yAxis: [{
-        show: true,
-        data: titlename,
-        inverse: true,
-        axisLine: {
-          show: false
-        },
-        splitLine: {
-          show: false
-        },
-        axisTick: {
-          show: false
-        },
-        axisLabel: {
-          color: "#fff",
-
-          rich: {
-            lg: {
-              backgroundColor: "#339911",
-              color: "#fff",
-              borderRadius: 15,
-              align: "center",
-              width: 15,
-              height: 15
-            }
-          }
-        }
-      },
-        {
-          show: false,
-          inverse: true,
-          data: valdata,
-          axisLabel: {
-            textStyle: {
-              fontSize: 12,
-              color: "#fff"
-            }
-          },
-          axisTick: {
-            show: false
-          },
-          axisLine: {
-            show: false
-          },
-        }
-      ],
-      series: [{
-        type: "bar",
-        yAxisIndex: 0,
-        data: data,
-        barCategoryGap: 50,
-        barWidth: 18,
-        itemStyle: {
-          normal: {
-            barBorderRadius: 20,
-            color: function (params) {
-              var num = myColor.length;
-              return myColor[params.dataIndex % num];
-            }
-          }
-        },
-        label: {
-          normal: {
-            show: true,
-            position: "right",
-            formatter: "{c}条",
-            color: "#fff",
-
-          }
-        }
-      },
-        {
-          type: "bar",
-          yAxisIndex: 1,
-          barCategoryGap: 50,
-          data: valdata,
-          barWidth: 20,
-          itemStyle: {
-            normal: {
-              color: "none",
-              borderColor: "#00c1de",
-              borderWidth: 2,
-              barBorderRadius: 15
-            }
-          }
-        }
-      ]
-    };
-
-    // 使用刚指定的配置项和数据显示图表。
-    myChart.setOption(option);
-    window.addEventListener("resize", function () {
-      myChart.resize();
-    });
-  }
-
-  char03()
-
 </script>
-
-
-<script>
-  var tbodyTr = $('tbody .case_');
-  var testResult = $("#testResult");
-  var testClass = $("#testClass");
-  <!--    用例执行详细信息显示切换-->
-  $(".btn_info").click(function () {
-    $(this).parent().parent().next().toggle();
-
-  });
-  // 当选择用例类之后触发
-  testClass.change(function () {
-    $('.test_log').hide();
-    var cls = $(this).val();
-    var res = testResult.val();
-    elementDisplay(cls, res);
-    sort()
-  });
-  testResult.change(function () {
-    var res = $(this).val();
-    var cls = testClass.val();
-    elementDisplay(cls, res);
-    sort()
-  });
-
-  function elementDisplay(cls, res) {
-    // 用例数据的显示
-    if (cls === "所有") {
-      if (res === "所有") {
-        tbodyTr.has('button').show();
-      } else if (res === '成功') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.text-success').show()
-
-      } else if (res === '错误') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.text-danger').show()
-
-      } else if (res === '失败') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.text-warning').show()
-
-      } else if (res === '跳过') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.text-info').show()
-      }
-    } else {
-      if (res === "所有") {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.' + cls + '').show()
-      } else if (res === '成功') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.' + cls + '').has('.text-success').show()
-      } else if (res === '错误') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.' + cls + '').has('.text-danger').show()
-      } else if (res === '失败') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.' + cls + '').has('.text-warning').show()
-      } else if (res === '跳过') {
-        tbodyTr.hide();
-        tbodyTr.has('button').has('.' + cls + '').has('.text-info').show()
-      }
-    }
-  }
-
-  function sort() {
-    //重新排列显示序号
-    // 选择所有可以见的tr
-    var visibleTr = tbodyTr.filter(":visible");
-
-    visibleTr.each(function (index, element) {
-      element.firstElementChild.innerHTML = index + 1;
-
-    })
-
-  }
-
-  $('.nav-tabs li').click(function () {
-    $(this).find('a').addClass('active');
-    $(this).siblings().find('a').removeClass('active');
-    $(this).parent().next().children('.tab-content div').eq($(this).index()).addClass('active show').siblings().removeClass('active show')
-  });
-
-  function keepTwoContainZero(num) {
-    var result = parseFloat(num);
-    if (isNaN(result)) {
-      result = 0;
-    }
-    result = Math.round(num * 100) / 100;
-    var s_x = result.toString();
-    var pos_decimal = s_x.indexOf('.');
-    if (pos_decimal < 0) {
-      pos_decimal = s_x.length;
-      s_x += '.';
-    }
-    while (s_x.length <= pos_decimal + 2) {
-      s_x += '0';
-    }
-    return s_x;
-  }
-</script>
-
 
 </body>
 </html>
