--- a/pytestFlexReport/templates/template3.html
+++ b/pytestFlexReport/templates/template3.html
@@ -260,19 +260,19 @@
           <div class="info">
             <div style="flex:18">
               <button type="button" class="btn btn-primary btn-sm">日志详情</button>
-              <a href="{{ log_path }}"><span>{{ log_path }}</span></a>
+              <a href="{{ log_path }}" target="_blank"><span>{{ log_path }}</span></a>
             </div>
           </div>
           <div class="info">
             <div style="flex:18">
               <button type="button" class="btn btn-primary btn-sm">报告详情</button>
-              <a href="{{ report_path }}"><span>{{ report_path }}</span></a>
+              <a href="{{ report_path }}" target="_blank"><span>{{ report_path }}</span></a>
             </div>
           </div>
           <div class="info">
             <div style="flex:18">
               <button type="button" class="btn btn-primary btn-sm">环境信息</button>
-              <a href="{{ report_path }}"><span>{{ report_path }}</span></a>
+              <a href="{{ report_path }}" target="_blank"><span>{{ report_path }}</span></a>
             </div>
           </div>
         </div>
